Inserted a UINagivationController between TableEditVC and EasySettingVC.

--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -715,7 +715,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrA-mT-SEY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4386" y="1355"/>
+            <point key="canvasLocation" x="4385" y="-99"/>
         </scene>
         <!--引用元選択-->
         <scene sceneID="QGT-B4-2Av">
@@ -757,7 +757,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KZz-Jd-Tib" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="M62-9g-UkL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="5183" y="1354"/>
+            <point key="canvasLocation" x="5094" y="-99"/>
         </scene>
         <!--授業時間設定-->
         <scene sceneID="tbS-gq-qEB">
@@ -787,7 +787,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eO-0X-nR4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="0il-rK-5Fz" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3671" y="1354"/>
+            <point key="canvasLocation" x="4385" y="1354"/>
         </scene>
         <!--個別授業時間設定-->
         <scene sceneID="ab5-5w-vdZ">
@@ -1342,13 +1342,29 @@
                         <segue destination="YBo-89-g3h" kind="show" identifier="toCalendarSetting" id="r0i-cU-aPU"/>
                         <segue destination="DOg-7I-T5V" kind="unwind" identifier="cancelToMenu" unwindAction="cancelToMenu:" id="iHW-yR-JBk"/>
                         <segue destination="EQa-Su-zeV" kind="show" identifier="toEachTime" id="DAt-Fd-oef"/>
-                        <segue destination="480-81-nYc" kind="show" identifier="toTimeSetting" id="D6I-fk-NGZ"/>
+                        <segue destination="GkP-P2-ha8" kind="show" identifier="toTimeSetting" id="GAG-CN-iWQ"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uip-Pw-NqV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="DOg-7I-T5V" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2908" y="1355"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="e7C-SA-Pcl">
+            <objects>
+                <navigationController id="GkP-P2-ha8" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LGu-7x-uIB">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="480-81-nYc" kind="relationship" relationship="rootViewController" id="7rh-gi-JGh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tVA-jj-Mjz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3670" y="1354"/>
         </scene>
         <!--カレンダー同期-->
         <scene sceneID="aux-zV-wjJ">
@@ -1543,7 +1559,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GKA-EC-dOc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="gAy-m4-Po6" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2908" y="2060"/>
+            <point key="canvasLocation" x="2135" y="2107"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7mH-hI-m90">
