Added color saving in DetailColorVC. Still working on refreshing TimeTable view after saving the changes of course information.

--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -57,10 +57,10 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="editButton" destination="GM6-iH-pyW" id="9jV-kg-gTf"/>
-                        <segue destination="mhe-eV-IIe" kind="presentation" identifier="goDetail" modalPresentationStyle="formSheet" id="YvY-VX-9af"/>
                         <segue destination="R8C-wN-jnd" kind="popoverPresentation" identifier="goEdit" popoverAnchorBarButtonItem="GM6-iH-pyW" id="eUS-ob-MpI">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                         </segue>
+                        <segue destination="Pjc-Fm-tSu" kind="push" identifier="goDetail" id="k6m-66-id2"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kM-gh-cqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -685,13 +685,7 @@
                             <outlet property="delegate" destination="8Pa-ti-Vhu" id="Ky7-BV-wDC"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="色選択" id="fqH-g1-zSg">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Omu-cg-rys">
-                            <connections>
-                                <action selector="doneButtonPushed:" destination="8Pa-ti-Vhu" id="Fke-eX-NNC"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="色選択" id="fqH-g1-zSg"/>
                     <connections>
                         <segue destination="C4a-a9-RNr" kind="unwind" identifier="backToDetail" unwindAction="backToDetail:" id="7hq-FV-1d3"/>
                     </connections>
@@ -926,27 +920,6 @@
             </objects>
             <point key="canvasLocation" x="3672" y="2060"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Pxp-tp-tpF">
-            <objects>
-                <navigationController toolbarHidden="NO" id="mhe-eV-IIe" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="evL-FU-mBL">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="men-ie-axO">
-                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="Pjc-Fm-tSu" kind="relationship" relationship="rootViewController" id="Flm-SC-wcr"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nss-xZ-ePu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2908" y="650"/>
-        </scene>
         <!--講義情報-->
         <scene sceneID="gRh-PS-bRp">
             <objects>
@@ -1177,14 +1150,9 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="講義情報" id="MbL-W3-Med">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="61M-6O-5Ai">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="rwo-z1-Ef0">
                             <connections>
-                                <segue destination="6ic-dh-rZC" kind="unwind" unwindAction="cancelToTimeTable:" id="6dP-QS-6wX"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="EkS-c9-gqg">
-                            <connections>
-                                <action selector="saveButtonPushed:" destination="Pjc-Fm-tSu" id="qXk-rg-3bS"/>
+                                <action selector="doneButtonPushed:" destination="Pjc-Fm-tSu" id="5Hq-yO-yFV"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
