--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -677,13 +677,7 @@
                             <outlet property="delegate" destination="8Pa-ti-Vhu" id="Ky7-BV-wDC"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="色選択" id="fqH-g1-zSg">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="dez-p3-dGf">
-                            <connections>
-                                <action selector="doneButtonPushed:" destination="8Pa-ti-Vhu" id="JBb-ZT-Td7"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="色選択" id="fqH-g1-zSg"/>
                     <connections>
                         <segue destination="C4a-a9-RNr" kind="unwind" identifier="UnwindDetailColorToDetail" unwindAction="unwindDetailColorToDetail:" id="UAX-hK-fUp"/>
                     </connections>
