--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -60,7 +60,7 @@
                         <segue destination="R8C-wN-jnd" kind="popoverPresentation" identifier="goEdit" popoverAnchorBarButtonItem="GM6-iH-pyW" id="eUS-ob-MpI">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                         </segue>
-                        <segue destination="Pjc-Fm-tSu" kind="show" identifier="goDetail" id="k6m-66-id2"/>
+                        <segue destination="ctA-3O-Pug" kind="presentation" identifier="goDetail" modalPresentationStyle="formSheet" id="fLM-U5-dqY"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kM-gh-cqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -701,7 +701,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrA-mT-SEY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3670" y="650"/>
+            <point key="canvasLocation" x="4385" y="650"/>
         </scene>
         <!--引用元選択-->
         <scene sceneID="QGT-B4-2Av">
@@ -743,7 +743,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KZz-Jd-Tib" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="M62-9g-UkL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4385" y="650"/>
+            <point key="canvasLocation" x="5068" y="650"/>
         </scene>
         <!--授業時間設定-->
         <scene sceneID="tbS-gq-qEB">
@@ -910,6 +910,22 @@
                 <exit id="0JA-6s-V6a" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3670" y="2111"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bMx-TZ-xJg">
+            <objects>
+                <navigationController id="ctA-3O-Pug" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kr9-8b-xQ8">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Pjc-Fm-tSu" kind="relationship" relationship="rootViewController" id="MQU-AR-IE8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eHi-CV-pgz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2908" y="650"/>
         </scene>
         <!--講義情報-->
         <scene sceneID="gRh-PS-bRp">
@@ -1139,6 +1155,11 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="講義情報" id="MbL-W3-Med">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="0RK-sQ-iSR">
+                            <connections>
+                                <segue destination="6ic-dh-rZC" kind="unwind" unwindAction="unwindDetailToTimeTable:" id="xqb-dq-HY3"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="rwo-z1-Ef0">
                             <connections>
                                 <action selector="doneButtonPushed:" destination="Pjc-Fm-tSu" id="5Hq-yO-yFV"/>
@@ -1160,7 +1181,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2cz-aC-6RV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="6ic-dh-rZC" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2908" y="650"/>
+            <point key="canvasLocation" x="3670" y="650"/>
         </scene>
         <!--時間割情報-->
         <scene sceneID="uGh-WX-YhR">
