--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -685,7 +685,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pib-0f-qZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="C4a-a9-RNr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4385" y="1354"/>
+            <point key="canvasLocation" x="3670" y="1354"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hyv-S8-evE">
@@ -772,7 +772,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eO-0X-nR4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="0il-rK-5Fz" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3671" y="1354"/>
+            <point key="canvasLocation" x="2135" y="2111"/>
         </scene>
         <!--個別授業時間設定-->
         <scene sceneID="ab5-5w-vdZ">
@@ -1599,11 +1599,15 @@
         <!--Navigation Controller-->
         <scene sceneID="oVo-mS-e59">
             <objects>
-                <navigationController id="XCl-6V-16m" sceneMemberID="viewController">
+                <navigationController toolbarHidden="NO" id="XCl-6V-16m" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="I1M-ba-3YQ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1GF-30-fEh">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="C3Y-eH-VaF" kind="relationship" relationship="rootViewController" id="xdC-4S-RQ2"/>
                     </connections>
