--- a/TimeTable/Base.lproj/Main.storyboard
+++ b/TimeTable/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u9V-Vf-zgx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -84,7 +83,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NGH-0h-sIZ">
-                                            <rect key="frame" x="24" y="15" width="279" height="21"/>
+                                            <rect key="frame" x="24" y="14.5" width="279" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="dSB-uE-xwa"/>
                                             </constraints>
@@ -360,10 +359,10 @@
             </objects>
             <point key="canvasLocation" x="2908" y="-1483"/>
         </scene>
-        <!--設定-->
+        <!--Settings-->
         <scene sceneID="8fC-FN-vag">
             <objects>
-                <tableViewController id="kpT-Rn-gZv" customClass="SettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="kpT-Rn-gZv" userLabel="Settings" customClass="SettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="l7E-ob-owf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -566,10 +565,10 @@
             </objects>
             <point key="canvasLocation" x="2908" y="-99"/>
         </scene>
-        <!--新規時間割作成-->
+        <!--Add View-->
         <scene sceneID="Xvb-nt-6WS">
             <objects>
-                <tableViewController id="OnH-CJ-dWD" customClass="AddViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="OnH-CJ-dWD" userLabel="Add View" customClass="AddViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="新規時間割作成" id="t8s-zw-32A">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2Zk-0A-q13">
                             <connections>
@@ -593,10 +592,10 @@
             </objects>
             <point key="canvasLocation" x="3670" y="-99"/>
         </scene>
-        <!--色選択-->
+        <!--Detail Color-->
         <scene sceneID="jIw-oQ-cZe">
             <objects>
-                <collectionViewController id="8Pa-ti-Vhu" customClass="DetailColorViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="8Pa-ti-Vhu" userLabel="Detail Color" customClass="DetailColorViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="9II-Tt-s9V">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -642,7 +641,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r0Q-38-OSw">
-                                            <rect key="frame" x="0.0" y="0.0" width="3" height="294"/>
+                                            <rect key="frame" x="0.0" y="20" width="3" height="274"/>
                                             <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="3" id="K4J-9E-mii"/>
@@ -703,10 +702,10 @@
             </objects>
             <point key="canvasLocation" x="4385" y="650"/>
         </scene>
-        <!--引用元選択-->
+        <!--Copy View-->
         <scene sceneID="QGT-B4-2Av">
             <objects>
-                <collectionViewController id="K6C-XR-zSE" customClass="CopyViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="K6C-XR-zSE" userLabel="Copy View" customClass="CopyViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="pJA-5l-Vrh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -745,10 +744,10 @@
             </objects>
             <point key="canvasLocation" x="5068" y="650"/>
         </scene>
-        <!--授業時間設定-->
+        <!--Easy Setting View-->
         <scene sceneID="tbS-gq-qEB">
             <objects>
-                <viewController id="480-81-nYc" customClass="EasySettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="480-81-nYc" userLabel="Easy Setting View" customClass="EasySettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6XC-1M-5d5"/>
                         <viewControllerLayoutGuide type="bottom" id="nTA-gF-H46"/>
@@ -774,10 +773,10 @@
             </objects>
             <point key="canvasLocation" x="2135" y="2111"/>
         </scene>
-        <!--個別授業時間設定-->
+        <!--Each Time View-->
         <scene sceneID="ab5-5w-vdZ">
             <objects>
-                <tableViewController id="EQa-Su-zeV" customClass="EachTimeViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="EQa-Su-zeV" userLabel="Each Time View" customClass="EachTimeViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="I0B-mp-clL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -817,7 +816,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="5" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ed-Gz-wSX">
-                                                    <rect key="frame" x="27.5" y="-33" width="320" height="216"/>
+                                                    <rect key="frame" x="27.5" y="-33.5" width="320" height="216.5"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="-978308099.234097">
                                                         <!--1969-12-31 23:45:00 +0000-->
                                                     </date>
@@ -868,7 +867,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="5" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Up6-wi-34g">
-                                                    <rect key="frame" x="27.5" y="-33" width="320" height="216"/>
+                                                    <rect key="frame" x="27.5" y="-33.5" width="320" height="216.5"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="-978302699.03177595">
                                                         <!--1970-01-01 01:15:00 +0000-->
                                                     </date>
@@ -927,10 +926,10 @@
             </objects>
             <point key="canvasLocation" x="2908" y="650"/>
         </scene>
-        <!--講義情報-->
+        <!--Detail View-->
         <scene sceneID="gRh-PS-bRp">
             <objects>
-                <tableViewController id="Pjc-Fm-tSu" customClass="DetailViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Pjc-Fm-tSu" userLabel="Detail View" customClass="DetailViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="nN6-6F-4Nd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1051,16 +1050,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6JP-hd-1EE">
-                                                    <rect key="frame" x="108" y="11" width="225" height="28"/>
+                                                    <rect key="frame" x="108" y="11" width="225" height="27.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31C-9S-adm">
-                                                            <rect key="frame" x="11" y="6" width="214" height="16"/>
+                                                            <rect key="frame" x="11" y="6" width="214" height="15.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nt5-AB-Zsl">
-                                                            <rect key="frame" x="0.0" y="0.0" width="3" height="28"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="3" height="27.5"/>
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="3" id="Fde-Ud-TlT"/>
@@ -1183,10 +1182,10 @@
             </objects>
             <point key="canvasLocation" x="3670" y="650"/>
         </scene>
-        <!--時間割情報-->
+        <!--Table Edit View-->
         <scene sceneID="uGh-WX-YhR">
             <objects>
-                <tableViewController id="e67-b7-RT0" customClass="TableEditViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="e67-b7-RT0" userLabel="Table Edit View" customClass="TableEditViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="50" sectionHeaderHeight="10" sectionFooterHeight="10" id="MQR-gs-40o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1328,10 +1327,10 @@
             </objects>
             <point key="canvasLocation" x="2908" y="1355"/>
         </scene>
-        <!--カレンダー同期-->
+        <!--Calendar View-->
         <scene sceneID="aux-zV-wjJ">
             <objects>
-                <tableViewController id="YBo-89-g3h" customClass="CalendarSettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="YBo-89-g3h" userLabel="Calendar View" customClass="CalendarSettingViewController" customModule="TimeTable" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="7cj-bA-cKo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1364,10 +1363,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AD0-f1-UBd">
-                                                    <rect key="frame" x="310" y="6" width="51" height="31"/>
+                                                    <rect key="frame" x="310" y="6.5" width="51" height="31"/>
                                                 </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カレンダー同期" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W4k-xi-Ctq">
-                                                    <rect key="frame" x="24" y="11" width="286" height="21"/>
+                                                    <rect key="frame" x="24" y="11.5" width="286" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -1427,7 +1426,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="IfM-YX-2si">
-                                                    <rect key="frame" x="27.5" y="-33" width="320" height="216"/>
+                                                    <rect key="frame" x="27.5" y="-33.5" width="320" height="216.5"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="462074165.07876599">
                                                         <!--2015-08-24 01:56:05 +0000-->
                                                     </date>
@@ -1478,7 +1477,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="dZv-x4-mck">
-                                                    <rect key="frame" x="27.5" y="-33" width="320" height="216"/>
+                                                    <rect key="frame" x="27.5" y="-33.5" width="320" height="216.5"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="462074171.75330502">
                                                         <!--2015-08-24 01:56:11 +0000-->
                                                     </date>
